--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
       <title>React App</title>
       <link rel="stylesheet" type="text/css" href="/assets/components-font-awesome/css/font-awesome.css"/>
       <link rel="stylesheet" type="text/css" href="/assets/bootstrap/dist/css/bootstrap.min.css" />
+      <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.1/react.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.1/react-dom.js"></script>
       <link rel="stylesheet" type="text/css" href="/styles.css"/>
    </head>
    <body>
