That is horribly unprofessional of me - forgot to change title of the page
While technically still true - the page is a React App, I felt it was not quite
reflecting a message I wanted to convey with my work :)§

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="UTF-8">
-      <title>React App</title>
+      <title>Tic Tac Toe API Client</title>
       <link rel="stylesheet" type="text/css" href="/assets/components-font-awesome/css/font-awesome.css"/>
       <link rel="stylesheet" type="text/css" href="/assets/bootstrap/dist/css/bootstrap.min.css" />
       <script
